--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="MtcACG - 二次元精品图库，收录 Pixiv、Yande.re 等平台的精美插画">
   <meta name="keywords" content="二次元,ACG,插画,Pixiv,动漫,壁纸">
+  <script defer src="https://umamii.zeabur.app/script.js" data-website-id="d3b3a2a7-1cd4-47d9-a958-7df99a3cd968"></script>
   <title>MtcACG - 二次元图库</title>
   <!-- 添加 favicon -->  
   <link rel="icon" type="image/png" href="https://pub-d07d03b8c35d40309ce9c6d8216e885b.r2.dev/ACGg.png">
